/*
 * $Id: ChangeLog,v 1.3169 2004/07/19 20:58:40 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-19 15:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/valtype.c
    ! Fixed HB_ISNULL() to prevent loosing of similar-but-not-the-same
      item types (i.e. MEMO as STRING type).

2004-07-20 09:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/filesys.c
    - hb_fsRename() changed to respect SET( HB_SET_FILECASE/DIRCASE )
       Effects FRENAME() & RENAME ... TO ...

2004-07-19 12:50 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * utils/hbmake/hbmutils.prg
    ! fixed mispeled lib nf name

2004-07-19 15:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/set.c
    - default HB_SET_FILECASE/DIRCASE for all platforms is now HB_SET_CASE_MIXED

2004-07-18 10:54 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    * Minor correction to recent fix in SearnRep()

2004-07-18 11:30 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * source/rtl/set.c
    include/hbset.h
    ! exported  hb_setGetFirstSetPath( void )
      Added HB_SET_STACK macro to access hb_set structure

2004-07-16 20:00 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * source/vm/runner.c
    ! Fix __hrbgetfu() check parameters from ISNUL(1) to ISPOINTER(1)

2004-07-16 14:30 UTC-3 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/odbc/odbc.c
    ! Fixed GPF in SqlGetData()
    + Added SQLMoreResults()
    + Added SQLBindOutParam() - This is a big trap, and should be
      used only if you know EXACTLY what you're doing!

2004-07-16 08:45 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * source/rtl/tbrowse.prg
    !HitTest( oBrowse, nRow, nCol )
    Now properly adjusts the ::mColPos.

2004-07-15 20:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/checkbox.prg