@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3169 2004/07/19 20:58:40 peterrees Exp $
+ * $Id: ChangeLog,v 1.3170 2004/07/19 21:11:14 guerra000 Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-07-20 09:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
+  * /source/rtl/console.c
+    - hb_conDevPos() changed to be Clipper compatible when PRINTing to file via @ x,y SAY
 
 2004-07-19 15:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/rtl/valtype.c
